Prepare release on Docker Hub
Signed-off-by: Niklas Gerstner <12609161+Krymonota@users.noreply.github.com>

--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -9,7 +9,7 @@
      attributes:
        label: Image tag
        description: Which image tag did you run?
-       placeholder: ghcr.io/hybrowse/hytale-server:latest
+       placeholder: hybrowse/hytale-server:latest
      validations:
        required: true
 
