--- a/.github/workflows/helm-chart.yml
+++ b/.github/workflows/helm-chart.yml
@@ -39,7 +39,7 @@ jobs:
             --app-version "${version}" \
             --destination .chart-repo
 
-          url="https://hybrowse.github.io/hytale-server-docker"
+          url="https://scotthowson.github.io/hytale-server-docker"
           if [ -f .chart-repo/index.yaml ]; then
             cp .chart-repo/index.yaml /tmp/index.yaml
             helm repo index .chart-repo --url "${url}" --merge /tmp/index.yaml
